# Personal-platypus-website

./: .gitignore  .slugignore  README.md  requirements.txt
RocketCode/: Cargo.toml
RocketCode/src/: main.rs
RocketCode/static/styles/: indexStyles.css
RocketCode/templates/: exercise.html.tera  gaming.html.tera  index.html.tera  socials.html.tera
code/services/: main.py
code/services/static/styles/: GalleryStyle.css  indexStyles.css  (+3 more)
code/services/templates/: ContactMe.html  discord.html  exercise.html  gaming.html  inProgress.html  index.html  papers.html  products.html  projects.html  socials.html  underConstruction.html
code/static/styles/: ContactMeStyles.css  indexStyles.css  productsStyles.css
code/templates/: discord.html  index.html
codeV2/services/: constants.py  contacts.csv  main.py
codeV2/services/templates/: ContactMe.html  discord.html  gaming.html  index.html  papers.html  products.html  socials.html  underConstruction.html
docs/: GalleryStyle.css  gaming.html  index.html  indexStyles.css  socials.html
flaskApp/: main.py
flaskApp/static/images/: jackal.HEIC
flaskApp/static/js/: cursor.js  custom.js  popupHandler.js  sidebarHandler.js
flaskApp/static/styles/: GalleryStyle.css  indexStyles.css  sideBarStyles.css  tableStyle.css
flaskApp/templates/: exercise.html  gaming.html  index.html  socials.html
rocket_code/: Cargo.toml
rocket_code/src/: main.rs
rocket_code/static/styles/: GalleryStyle.css  indexStyles.css  tableStyle.css
rocket_code/templates/: exercise.html.tera  gaming.html.tera  index.html.tera  socials.html.tera
(+2 files in other folders)
